# Apify_Scrape_social

./: README.md  REDIS_SETUP.md  pyproject.toml  requirements.txt  run.py  vercel.json
app/: apify_utils.py  celery_app.py  config.py  main.py  models.py  supabase_utils.py  tasks.py
tasks/: worker.py
templates/: base.html  index.html  jobs.html  requests.html  results.html
